--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     <br>
     <div class = "info-block">
 
-      Why Rust
-    - Good balance between low level verbosity and high level productivity
-    - Rust has a focus on safety and speed
-    - Great memory safety
-    - Automatic garbage collection
-    - Rust won the first place for Most Loved Programming Language of 2016 in the Stack Overflow Developer Survey !!! :)
+    <h3>Why Rust</h3>
+    <ul>
+    <li>Good balance between low level verbosity and high level productivity</li>
+    <li>Rust has a focus on safety and speed</li>
+    <li>Great memory safety</li>
+    <li>Automatic garbage collection</li>
+    <li>Rust won the first place for Most Loved Programming Language of 2016 in the Stack Overflow Developer Survey !!! :)</li>
     </div>
     <div class = "info-block">
     Ownership
