--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html>
   <head>
     <script src="rust.js"></script>
+    <meta charset="utf-8">
   </head>
   <body>
-    <pre class="code1">
-      "function jsfhjk():
-      
-      "
-    </pre>
     <a href="javascript:pageScroll()">Scroll Page</a>
     <p>
       <input type="button" onClick="pageScroll()" value="Scroll Page">
@@ -17,8 +13,13 @@
     <br>
     <br>
     <br>
-    <div class = "info-block">
 
+    <div id="header">
+        <h1><img src="rust.png" height="3%" width="3%">UST</h1>
+        <h2>Team Doppelgänger 2.0: EV and BSS</h2>
+    </div>
+
+    <div class = "info-block">
     <h3>Why Rust</h3>
     <ul>
         <li>Good balance between low level verbosity and high level productivity</li>
@@ -27,6 +28,7 @@
         <li>Automatic garbage collection</li>
         <li>Rust won the first place for Most Loved Programming Language of 2016 in the Stack Overflow Developer Survey !!! :)</li>
     </ul>
+    <button type="button">Back to top</button>
     </div>
 
     <div class = "info-block">
@@ -43,6 +45,7 @@
         <li>shallow copy of v created on stack but not in heap</li>
         <li>so now v cannot be used: v2 is the only valid connection to v</li>
     </ul>
+    <button type="button" onClick="homeScroll()">Back to top</button>
     </div>
 
     <div class = "info-block">
@@ -57,6 +60,7 @@
         <li>in order to do this, v must have been declared as mutable ( let mut v = vec![1,2,3]; )</li>
         <li>Use & to create a reference (get the memory address of a resource), and use * to dereference (get the resource located at memory address)</li>
     </ul>
+    <button type="button" onClick="homeScroll()">Back to top</button>
     </div>
 
     <div class = "info-block">
@@ -68,6 +72,7 @@
         <li>exactly one mutable reference (&mut T)</li>
         <li>avoids a data race</li>
     </ul>
+    <button type="button" onClick="homeScroll()">Back to top</button>
     </div>
 
     <div class = "info-block">
@@ -84,6 +89,7 @@
         <li>Lifetime: the scope that a reference is valid for, or how long the resource lives</li>
         <li>Scope of a reference: think of it as from the curly brace before it to the one matching that</li>
     </ul>
+    <button type="button" onClick="homeScroll()">Back to top</button>
     </div>
 
     <div class = "info-block">
@@ -93,6 +99,7 @@
         <li>If there is exactly one input lifetime, that lifetime is assigned to all elided lifetimes in the return values of that function.</li>
         <li>If there are multiple input lifetimes, but one of them is &self or &mut self, the lifetime of self is assigned to all elided output lifetimes.</li>
     </ul>
+    <button type="button" onClick="homeScroll()">Back to top</button>
     </div>
     <br>
     <br>
