--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <a href="javascript:pageScroll()">Scroll Page</a>
     <p>
-      <input type="button" onClick="pageScroll()" value="Scroll Page">
+      <input type="button" onClick="scroll1()" value="Scroll Page">
     </p>
     <br>
     <br>
@@ -28,7 +27,7 @@
         <li>Automatic garbage collection</li>
         <li>Rust won the first place for Most Loved Programming Language of 2016 in the Stack Overflow Developer Survey !!! :)</li>
     </ul>
-    <button type="button">Back to top</button>
+    <button type="button" onClick="homeScroll()">Back to top</button>
     </div>
 
     <div class = "info-block">
