--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <script src="rust.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="utf-8">
 
-        <div id="header">
+    <div id="header">
         <h1><img src="rust.png" height="5%" width="5%">UST</h1>
         <h2>Team Doppelgänger 2.0: EV and BSS</h2>
     </div>
