--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <div id="header">
-        <h1><img src="rust.png" height="5%" width="5%">UST</h1>
+        <h1 id="bigTitle"><span><img src="rust.png" height="5%" width="5%">UST</span></h1>
         <h2>Team Doppelgänger 2.0: EV and BSS</h2>
     </div>
 
