--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
         <li>shallow copy of v created on stack but not in heap</li>
         <li>so now v cannot be used: v2 is the only valid connection to v</li>
     </ul>
+    <code>
+        fn main() {<br>
+            let v = vec![1, 2, 3];<br>
+            let v2 = v;<br>
+            println!("v[0] is: {}", v[0]);<br>
+        }<br>
+    </code>
+    <p>Test out the above example <button type="button" onClick="openInNewTab('fn main() {println!(&quot;hello&quot;)}')">here</button>!</p>
     <button type="button" onClick="homeScroll()">Back to top</button>
     </div>
 
