ownership example working

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             println!("v[0] is: {}", v[0]);<br>
         }<br>
     </code>
-    <p>Test out the above example <button type="button" onClick="openInNewTab('fn main() {println!(&quot;hello&quot;)}')">here</button>!</p>
+    <p>Test out the above example <button type="button" onClick="openInNewTab('fn main() {&nbsp;let v = vec![1, 2, 3];&nbsp;let v2 = v;&nbsp;println!(&quot;v[0] is: {}&quot;, v[0]);&nbsp;}')">here</button>!</p>
     <button type="button" onClick="homeScroll()">Back to top</button>
     </div>
 
