--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         }&nbsp;
     </code>
 
-    <p>Test out the above example <button type="button" onClick="openInNewTab('fn main() {&nbsp;let v = vec![1, 2, 3];&nbsp;let v2 = v;&nbsp;println!(&quot;v[0] is: {}&quot;, v[0]);&nbsp;}')">here</button>!</p>
+    <p>Test out the above example <button type="button" onClick="openInNewTab('')">here</button>!</p>
     <button type="button" onClick="homeScroll()">Back to top</button>
     </div>
 
@@ -75,23 +75,23 @@
     </ul>
 
     <code>
-    fn main() {&nbsp;
-        fn sum_vec(v: &Vec<i32>) -> i32 {&nbsp;
-            return v.iter().fold(0, |a, &b| a + b);&nbsp;
-        }&nbsp;
-        fn foo(v1: &Vec<i32>, v2: &Vec<i32>) -> i32 {&nbsp;
-            let s1 = sum_vec(v1);&nbsp;
-            let s2 = sum_vec(v2);&nbsp;
-            // Return the answer.&nbsp;
-            s1 + s2&nbsp;
-        }&nbsp;
-        let v1 = vec![1, 2, 3];&nbsp;
-        let v2 = vec![4, 5, 6];&nbsp;
-        let answer = foo(&v1, &v2);&nbsp;
-        println!("{}", answer);&nbsp;
-    }&nbsp;
+    fn main() {&#13;
+        fn sum_vec(v: &Vec<i32>) -> i32 {&#13;
+            return v.iter().fold(0, |a, &b| a + b);&#13;
+        }&#13;
+        fn foo(v1: &Vec<i32>, v2: &Vec<i32>) -> i32 {&#13;
+            let s1 = sum_vec(v1);&#13;
+            let s2 = sum_vec(v2);&#13;
+            // Return the answer.&#13;
+            s1 + s2&#13;
+        }&#13;
+        let v1 = vec![1, 2, 3];&#13;
+        let v2 = vec![4, 5, 6];&#13;
+        let answer = foo(&v1, &v2);&#13;
+        println!("{}", answer);&#13;
+    }&#13;
     </code>
-    <p>Test out the above example <button type="button" onClick="openInNewTab('fn main() {&nbsp;fn sum_vec(v: &Vec<i32>) -> i32 {&nbsp;return v.iter().fold(0, |a, &b| a + b);&nbsp;}&nbsp;fn foo(v1: &Vec<i32>, v2: &Vec<i32>) -> i32 {&nbsp;let s1 = sum_vec(v1);&nbsp;let s2 = sum_vec(v2);&nbsp;// Return the answer.&nbsp;s1 + s2&nbsp;}&nbsp;let v1 = vec![1, 2, 3];&nbsp;let v2 = vec![4, 5, 6];&nbsp;let answer = foo(&v1, &v2);&nbsp;println!(&quot;{}&quot;, answer);&nbsp;}')">here</button>!</p>
+    <p>Test out the above example <button type="button" onClick="openInNewTab('')">here</button>!</p>
 
     </div>
 
