--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         }<br>
     </p>
 
-    <p>Test out the above example <button type="button" onClick="openInNewTab('')">here</button>!</p>
+    <p>Test out the above example <button type="button" onClick="openInNewTab('fn main() {\n\tlet v = vec![1, 2, 3];\n\tlet v2 = v;\n\tprintln!(&quot;v[0] is: {}&quot;, v[0]);\n}\n')">here</button>!</p>
     <button type="button" onClick="homeScroll()">Back to top</button>
     </div>
 
