--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <script src="rust.js" />
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel="stylesheet" type="text/css" href="rust.css">
@@ -35,7 +36,7 @@
     <div id="navigate">
         <ul>
             <li><button onClick="scroll1('why-rust')" type="button" value="Why Rust"/>Why Rust</li>
-            <li><button onClick="scroll1('ownership')" type="button" value="Ownership"/>Ownership</li>
+            <!--<li><button onClick="scroll1('ownership')" type="button" value="Ownership"/>Ownership</li>-->
             <li><button onClick="scroll1('ref-and-borrow')" type="button" value="References and Borrowing"/>References and Borrowing</li>
             <li><button onClick="scroll1('lifetimes')" type="button" value="Lifetimes"/>Lifetimes</li>
         </ul>
