nice effects on code buttons

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <li>I lend you a reference to resource x (let's call it y)</li>
                             <li>I am done with x and deallocate it</li>
                             <li>You decide to use y (which uses x)</li>
-                            <li>Dangling pointer (Rust: Nuh uh!)</li>
+                            <li>Dangling pointer (C: ¯\_(ツ)_/¯, Rust: Nuh uh!)</li>
                         </ul>
                         <li>Lifetime: the scope that a reference is valid for, or how long the resource lives</li>
                         <li>Scope of a reference: think of it as from the curly brace before it to the one matching that</li>
