Make back to top buttons prettier

--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
                         }<br>
                     </p>
 
-                    <p class="test">Test out the above example <button type="button" onClick="openInNewTab('fn main() {\n\tlet v = vec![1, 2, 3];\n\tlet v2 = v;\n\tprintln!(&quot;v[0] is: {}&quot;, v[0]);\n}\n')">here</button>!</p>
-                    <button type="button" onClick="homeScroll()">Back to top</button>
+                    <p class="test"><button type="button" onClick="openInNewTab('fn main() {\n\tlet v = vec![1, 2, 3];\n\tlet v2 = v;\n\tprintln!(&quot;v[0] is: {}&quot;, v[0]);\n}\n')">Test code</button></p>
                     </div>
             </div>
         </div>
@@ -125,7 +124,7 @@
                         &emsp;println!("{}", answer);<br>
                     }<br>
                     </p>
-                    <p class="test">Test out the above example <button type="button" onClick="openInNewTab('fn main() {\n\tfn sum_vec(v: &Vec<i32>) -> i32 {\n\t\treturn v.iter().fold(0, |a, &b| a + b);\n\t}\n\tfn foo(v1: &Vec<i32>, v2: &Vec<i32>) -> i32 {\n\t\tlet s1 = sum_vec(v1);\n\t\tlet s2 = sum_vec(v2);\n\t\ts1 + s2\n\t}\n\tlet v1 = vec![1, 2, 3];\n\tlet v2 = vec![4, 5, 6];\n\tlet answer = foo(&v1, &v2);\n\tprintln!(&quot;{}&quot;, answer);\n}\n')">here</button>!</p>
+                    <p class="test"><button type="button" onClick="openInNewTab('fn main() {\n\tfn sum_vec(v: &Vec<i32>) -> i32 {\n\t\treturn v.iter().fold(0, |a, &b| a + b);\n\t}\n\tfn foo(v1: &Vec<i32>, v2: &Vec<i32>) -> i32 {\n\t\tlet s1 = sum_vec(v1);\n\t\tlet s2 = sum_vec(v2);\n\t\ts1 + s2\n\t}\n\tlet v1 = vec![1, 2, 3];\n\tlet v2 = vec![4, 5, 6];\n\tlet answer = foo(&v1, &v2);\n\tprintln!(&quot;{}&quot;, answer);\n}\n')">Test code</button></p>
 
                     </div>
             </div>
@@ -182,7 +181,7 @@
                             &emsp;println!("{}", f.x);<br>
                         }<br>
                     </p>
-                    <p class="test">Test out the above example <button type="button" onClick="openInNewTab('struct Foo<\'a> {\n\tx: &\'a i32,\n}\nfn main() {\n\tlet y = &5;\n\tlet f = Foo { x: y };\n\tprintln!(\&quot;{}\&quot;, f.x);\n}\n')">here</button>!</p>
+                    <p class="test"><button type="button" onClick="openInNewTab('struct Foo<\'a> {\n\tx: &\'a i32,\n}\nfn main() {\n\tlet y = &5;\n\tlet f = Foo { x: y };\n\tprintln!(\&quot;{}\&quot;, f.x);\n}\n')">Test code</button></p>
                     </div>
             </div>
         </div>
