--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="header">
         <h1 id="bigTitle"><a href="https://www.rust-lang.org/en-US/"><span><img src="rust.png" height="6%" width="6%">UST</span></a></h1>
-        <h2>Team Doppelgänger 2.0: EV and BSS</h2>
+        <h2><a href="https://github.com/evookelj/evookelj.github.io">Team Doppelgänger 2.0: EV and BSS</a></h2>
     </div>
 
     <div id="navigate">
